prevent list options from stretching past selector's width

--- a/resources/assets/less/bem/beatmap-list.less
+++ b/resources/assets/less/bem/beatmap-list.less
@@ -29,6 +29,10 @@
     z-index: @z-index--blackout-visible;
   }
 
+  &__body {
+    min-width: 0;
+  }
+
   &__selector {
     .default-box-shadow();
 
